# kata-containers

src/runtime-rs/: Cargo.toml
src/runtime-rs/crates/footest/: Cargo.toml
src/runtime-rs/crates/footest/src/: main.rs
src/runtime-rs/crates/runtimes/src/: manager.rs
src/runtime-rs/crates/runtimes/virt_container/src/: sandbox.rs
src/runtime-rs/crates/runtimes/virt_container/src/container_manager/: container.rs  manager.rs
