[package]
name = "footest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
env_logger = "0.10.0"
log = "0.4.14"
slog = "2.7.0"
slog-term = "2.7.0"
slog-async = "2.7.0"
slog-scope = "4.4.0"
libc = ">=0.2.39"
vmm-sys-util = "0.11.0"
dragonball = { path = "../../../dragonball", features = ["atomic-guest-memory", "virtio-vsock", "hotplug", "virtio-blk", "virtio-net", "virtio-fs","dbs-upcall"] }
